# srfax-service

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
src/: cli.rs  config.rs  email.rs  main.rs  main_ws.rs  response.rs  srfax.rs  srfax_service.rs
src/common/: email.rs  mod.rs  ntlm.rs  phone.rs  sql.rs  winservice.rs
