[package]
name = "srfax-service"
version = "0.1.2"
authors = ["Madelyn Seal <winterberry42@protonmail.com>"]
description = "SRFax downloader service"
repository = "https://github.com/madelynseal/srfax-service"
homepage = "https://github.com/madelynseal/srfax-service"
readme = "README.md"
keywords = ["srfax", "api", "service", "cli", "bin"]
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"

[profile.release]
lto=true

[dependencies]
serde="1.0"
serde_derive="1.0"
serde_json="1.0"
futures="0.1"
reqwest="0.9"
chrono="0.4"
flexi_logger="0.14"
log={version="0.4", features=["release_max_level_info"]}
log-panics={version="2", features=["with-backtrace"]}
base64="0.10"
clap="2"
failure="0.1"

mail-core="0.6"
mail-headers="0.6"
mail-smtp="0.2"
new-tokio-smtp="0.8"

windows-service="0.2"
unwrap="1.2"

[build-dependencies]
vergen="3"
