[package]
name = "srfax-service"
version = "0.1.3"
edition = "2021"
authors = ["Madelyn Seal <winterberry42@protonmail.com>"]
description = "SRFax downloader service"
repository = "https://github.com/madelynseal/srfax-service"
homepage = "https://github.com/madelynseal/srfax-service"
readme = "README.md"
keywords = ["srfax", "api", "service", "cli", "bin"]
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"

[profile.release]
lto=true

[dependencies]
serde="1.0"
serde_derive="1.0"
serde_json="1.0"
reqwest={version="0.12", features = ["blocking", "json"]}
chrono="0.4"
flexi_logger="0.29"
log={version="0.4", features=["release_max_level_info"]}
log-panics={version="2", features=["with-backtrace"]}
base64="0.22"
clap={version="4", features=["cargo"]}
thiserror="2"
anyhow="1"

lettre="0.11"

windows-service="0.7"
unwrap="1.2"
lazy_static="1.5"

[build-dependencies]
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }